--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
   <!-- Hero Section -->
   <section id="hero-section" data-aos="fade-up">
-    <h2>Hi, I'm Ankit 👋</h2>
+    <h2>Hi, I'm Ankit Kumar Maurya 👋</h2>
     <p>A passionate Web Developer skilled in HTML, CSS, JavaScript, and modern frameworks.</p>
     <img src="Ankit2.jpg" alt="Ankit" />
     <a href="#contact" class="btn-primary mt-6">Contact Me</a>
