--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       class="min-h-screen flex flex-col justify-center items-center text-center px-6 pt-20"
     >
       <h2 class="text-5xl md:text-6xl font-extrabold tracking-tight">
-        Hi, I'm <span class="text-blue-400">Ankit Maurya</span>
+        Hi, I'm <span class="text-blue-400">Ankit Kumar Maurya</span>
       </h2>
       <p class="max-w-xl mt-6 text-gray-400 text-lg">
         Web Developer focused on building fast, scalable, and modern web
@@ -72,7 +72,11 @@
         >
           <h4 class="text-xl font-semibold">FoodMenu</h4>
           <p class="mt-3 text-gray-400">
-            CLI-based interactive food ordering system built with Python.
+            The Python program includes a smart food ordering module that
+            displays different menus based on the time of day—morning,
+            afternoon, or evening. Passengers can choose items like snacks,
+            drinks, South Indian dishes, or full thalis, with automatic price
+            calculation and total bill generation.
           </p>
           <a href="#" class="text-blue-400 mt-4 block hover:underline"
             >GitHub →</a
@@ -88,8 +92,8 @@
             Fast & minimal typing test website built with React + Tailwind.
           </p>
           <div class="mt-4 space-x-4">
-            <a href="#" class="text-blue-400 hover:underline">GitHub →</a>
-            <a href="#" class="text-blue-400 hover:underline">Demo →</a>
+            <a href="https://github.com/ankit-kr-maurya-82/SiTyping" class="text-blue-400 hover:underline">GitHub →</a>
+            <a href="https://si-typing01.vercel.app/" class="text-blue-400 hover:underline">Demo →</a>
           </div>
         </div>
 
@@ -97,15 +101,33 @@
         <div
           class="bg-[#161b22] p-6 rounded-xl border border-white/5 hover:border-blue-500/40 transition hover:-translate-y-1"
         >
-          <h4 class="text-xl font-semibold">ColorLab </h4>
+          <h4 class="text-xl font-semibold">ColorLab</h4>
           <p class="mt-3 text-gray-400">
-         Tech-themed premium Color layout with micro-animations.
+            Tech-themed premium Color layout with micro-animations.
           </p>
-          <a href="https://github.com/ankit-kr-maurya-82/ColorLab" class="text-blue-400 mt-4 block hover:underline"
-            >View →</a
+          <div class="mt-4 space-x-4">
+            <a href="https://github.com/ankit-kr-maurya-82/cololab" class="text-blue-400 hover:underline">GitHub →</a>
+            <a href="https://cololab.vercel.app/" class="text-blue-400 hover:underline">Demo →</a>
+          </div>
+        </div>
+        <!-- Card 4 -->
+        <div
+          class="bg-[#161b22] p-6 rounded-xl border border-white/5 hover:border-blue-500/40 transition hover:-translate-y-1"
+        >
+          <h4 class="text-xl font-semibold">Train Journey</h4>
+          <p class="mt-3 text-gray-400">
+            A complete Train Journey Program built in Python that simulates real
+            train ticket booking. It includes train search, route handling,
+            passenger input, age & gender-based fare discounts, food ordering
+            options, seat availability tracking, and final booking confirmation.
+            Designed using modular functions for clarity and easy expansion.
+          </p>
+          <a
+            href="https://github.com/ankit-kr-maurya-82/Python-Projects/tree/main/trainTicket"
+            class="text-blue-400 mt-4 block hover:underline"
+            >GitHub →</a
           >
         </div>
-        
       </div>
     </section>
 
