--- a/index.html
+++ b/index.html
@@ -138,31 +138,31 @@
       <div
         class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-6 gap-6 mt-14 text-center"
       >
-        <div class="bg-[#161b22] py-4 rounded-lg border border-white/5">
+        <div class="bg-[#161b22] py-4 rounded-lg border border-white/5 hover:bg-blue-600 cursor-pointer">
           HTML
         </div>
-        <div class="bg-[#161b22] py-4 rounded-lg border border-white/5">
+        <div class="bg-[#161b22] py-4 rounded-lg border border-white/5 hover:bg-blue-600 cursor-pointer">
           CSS
         </div>
-        <div class="bg-[#161b22] py-4 rounded-lg border border-white/5">
+        <div class="bg-[#161b22] py-4 rounded-lg border border-white/5 hover:bg-blue-600 cursor-pointer">
           JavaScript
         </div>
-        <div class="bg-[#161b22] py-4 rounded-lg border border-white/5">
+        <div class="bg-[#161b22] py-4 rounded-lg border border-white/5 hover:bg-blue-600 cursor-pointer">
           Python
         </div>
-        <div class="bg-[#161b22] py-4 rounded-lg border border-white/5">
+        <div class="bg-[#161b22] py-4 rounded-lg border border-white/5 hover:bg-blue-600 cursor-pointer">
           React
         </div>
-        <div class="bg-[#161b22] py-4 rounded-lg border border-white/5">
+        <div class="bg-[#161b22] py-4 rounded-lg border border-white/5 hover:bg-blue-600 cursor-pointer">
           Node.js
         </div>
-        <div class="bg-[#161b22] py-4 rounded-lg border border-white/5">
+        <div class="bg-[#161b22] py-4 rounded-lg border border-white/5 hover:bg-blue-600 cursor-pointer">
           MySQL
         </div>
-        <div class="bg-[#161b22] py-4 rounded-lg border border-white/5">
+        <div class="bg-[#161b22] py-4 rounded-lg border border-white/5 hover:bg-blue-600 cursor-pointer">
           Tailwind
         </div>
-        <div class="bg-[#161b22] py-4 rounded-lg border border-white/5">
+        <div class="bg-[#161b22] py-4 rounded-lg border border-white/5 hover:bg-blue-600 cursor-pointer">
           Git
         </div>
       </div>
@@ -174,9 +174,9 @@
       <p class="mt-4 text-gray-400">Let’s collaborate on something amazing!</p>
 
       <div class="flex justify-center gap-10 mt-10 text-xl">
-        <a href="#" class="hover:text-blue-400 transition">GitHub</a>
-        <a href="#" class="hover:text-blue-400 transition">LinkedIn</a>
-        <a href="#" class="hover:text-blue-400 transition">Instagram</a>
+        <a href="https://github.com/ankit-kr-maurya-82" target="_blank" class="hover:text-blue-400 transition">GitHub</a>
+        <a href="https://www.linkedin.com/feed/" target="_blank" class="hover:text-blue-400 transition">LinkedIn</a>
+        <a href="https://www.instagram.com/_.ankit._82/?hl=en"    target="_blank" class="hover:text-blue-400 transition">Instagram</a>
       </div>
     </section>
 
