--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
       <div class="flex justify-center gap-10 mt-10 text-xl">
         <a href="https://github.com/ankit-kr-maurya-82" target="_blank" class="hover:text-blue-400 transition">GitHub</a>
         <a href="https://www.linkedin.com/feed/" target="_blank" class="hover:text-blue-400 transition">LinkedIn</a>
-        <a href="https://www.instagram.com/_.ankit._82/?hl=en"    target="_blank" class="hover:text-blue-400 transition">Instagram</a>
+        <a href="https://www.instagram.com/ak_maurya_50/?hl=en"    target="_blank" class="hover:text-blue-400 transition">Instagram</a>
       </div>
     </section>
 
